# vst3sdk_projectTemplate

./: .gitignore  CMakeLists.txt  README.md
host_projects/: reaper.rpp  reaper.rpp-bak  two-feet-her-life.mp3.reapeaks
resource/: Info.plist  myplugineditor.uidesc  win32resource.aps
scripts/: build_visual_studio.bat  build_xcode.sh  download_sdk.bat  download_sdk.sh  setup.bat  setup.sh
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
source/dsp/: Filter.cpp  Filter.hpp  SimpleBiquad.cpp  SimpleBiquad.hpp
source/utils/: utils.hpp
